--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="black" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="icons/icon-192.png" sizes="192x192" />
+    <link rel="icon" href="icons/icon-256.png" sizes="256x256" />
+    <link rel="icon" href="icons/icon-512.png" sizes="512x512" />    
     <style media='screen' type='text/css'>
       @font-face {
         font-family: "CompassPro";
